# src/models/Cita.ts
@@ -1,0 +1,8 @@
+export interface Cita {
+  citaUuid: string;
+  aseguradoId: string;
+  scheduleId: number;
+  paisISO: 'PE' | 'CL';
+  estado: 'pending' | 'completed';
+  fechaCreacion: string;
+}
